<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    focusable="true"
    >

  <LinearLayout
      android:id="@+id/forward_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/app_selector"
      android:clickable="true"
      android:drawSelectorOnTop="false"
      android:focusable="true"
      android:gravity="center_horizontal|center_vertical"
      android:orientation="horizontal"
      android:paddingBottom="5dp"
      android:paddingTop="5dp"
      android:visibility="invisible"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bubble_small"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        android:text="@string/forward_arrow"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        />


  </LinearLayout>

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/app_item_1"
      android:layout_width="fill_parent"
      android:layout_height="0px"
      android:layout_weight="0.25"
      android:background="@drawable/app_selector"
      android:clickable="true"
      android:drawSelectorOnTop="false"
      android:focusable="true"
      android:visibility="visible"
      >

    <TextView
        android:id="@+id/app_description_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bubble_small"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:singleLine="true"
        android:text="4 mins ago"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/app_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_description_1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bubble"
        android:gravity="center_vertical"
        android:paddingLeft="3dp"
        android:singleLine="true"
        android:text="@string/waiting"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        />

    <ImageView
        android:id="@+id/app_icon_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_title_1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon"
        />

  </RelativeLayout>

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/app_item_2"
      android:layout_width="fill_parent"
      android:layout_height="0px"
      android:layout_weight="0.25"
      android:background="@drawable/app_selector"
      android:clickable="true"
      android:drawSelectorOnTop="false"
      android:focusable="true"
      android:visibility="invisible"
      >

    <TextView
        android:id="@+id/app_description_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bubble_small"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:singleLine="true"
        android:text="4 mins ago"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/app_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_description_2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bubble"
        android:gravity="center_vertical"
        android:paddingLeft="3dp"
        android:singleLine="true"
        android:text="App Title"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        />

    <ImageView
        android:id="@+id/app_icon_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_title_2"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon"
        />

  </RelativeLayout>
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/app_item_3"
      android:layout_width="fill_parent"
      android:layout_height="0px"
      android:layout_weight="0.25"
      android:background="@drawable/app_selector"
      android:clickable="true"
      android:drawSelectorOnTop="false"
      android:focusable="true"
      android:visibility="invisible"
      >

    <TextView
        android:id="@+id/app_description_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bubble_small"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:singleLine="true"
        android:text="4 mins ago"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/app_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_description_3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bubble"
        android:gravity="center_vertical"
        android:paddingLeft="3dp"
        android:singleLine="true"
        android:text="App Title"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        />

    <ImageView
        android:id="@+id/app_icon_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_title_3"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon"
        />

  </RelativeLayout>
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/app_item_4"
      android:layout_width="fill_parent"
      android:layout_height="0px"
      android:layout_weight="0.25"
      android:background="@drawable/app_selector"
      android:clickable="true"
      android:drawSelectorOnTop="false"
      android:focusable="true"
      android:visibility="invisible"
      >

    <TextView
        android:id="@+id/app_description_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bubble_small"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="3dp"
        android:singleLine="true"
        android:text="4 mins ago"
        android:textColor="@android:color/white"

        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/app_title_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_description_4"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bubble"
        android:gravity="center_vertical"
        android:paddingLeft="3dp"
        android:singleLine="true"
        android:text="App Title"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        />

    <ImageView
        android:id="@+id/app_icon_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_title_4"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon"
        />

  </RelativeLayout>


  <LinearLayout
      android:id="@+id/back_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/app_selector"
      android:clickable="true"
      android:drawSelectorOnTop="false"
      android:focusable="true"
      android:gravity="center_horizontal|center_vertical"
      android:orientation="horizontal"
      android:paddingBottom="5dp"
      android:paddingTop="5dp"
      android:visibility="invisible"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bubble_small"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        android:text="@string/back_arrow"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        />


  </LinearLayout>

</LinearLayout>
